# warehouse-system

./: .gitignore  FEATURES.md  README.md  check-env.bat  docker-compose.yml  package-lock.json  package.json  start-backend.bat  start-docker.bat  start.bat  temp_password.txt  提交作业-安装部署说明.doc  提交作业-安装部署说明.md  详细设计报告.doc  详细设计报告.md  需求规格说明书.doc  需求规格说明书.md
.codebuddy/rules/: claude.mdc
backend/: Dockerfile  pom.xml
backend/src/main/java/com/warehouse/: WarehouseApplication.java
backend/src/main/java/com/warehouse/common/: JwtUtil.java  Result.java
backend/src/main/java/com/warehouse/config/: ApiPrefixFilter.java  LoginInterceptor.java  MybatisPlusConfig.java  SecurityConfig.java  SpaErrorController.java  WebMvcConfig.java
backend/src/main/java/com/warehouse/entity/: Alert.java  (+4 more)
backend/src/main/resources/: application.yml
backend/src/main/resources/mapper/: GoodsMapper.xml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/router/: index.js
frontend/src/utils/: request.js
frontend/src/views/: AiAssistant.vue  AiReport.vue  Alert.vue  Goods.vue  Home.vue  Layout.vue  Login.vue  Record.vue  Storage.vue  User.vue
sql/: add_barcode.sql  create_alert_table.sql  fix_goods_barcode.sql  init.sql  migrate_add_unique_constraints.sql  optimize_storage_names.sql  reset_auto_increment.sql
提交作业-安装部署说明.files/: filelist.xml
(+13 files in other folders)
