[package]
name = "warehouse-desktop"
version = "1.0.0"
description = "仓库管理系统桌面版"
authors = ["warehouse-team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "warehouse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
